Added description container for details, fieldset section for required input element,and button element for signup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin sign up form</title>
     <link href="css/index.css" rel="stylesheet" />
-    <link type="image/x-icon" href="me.jpg" rel="shortcut icon" />
   </head>
   <body>
     <div class="container">
@@ -13,9 +12,8 @@
         <div class="logo-bar">
           <img
             src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
-            title="unsplash-image"
+            title="leaf-image"
             alt="The Odin Project logo"
-            srcset=""
           />
           <h1>ODIN</h1>
         </div>
