--- a/index.html
+++ b/index.html
@@ -58,21 +58,11 @@
             <fieldset>
               <div class="details-conatiner">
                 <label for="confirm-pw">Password</label>
-                <input
-                  id="confirm-pw"
-                  name="confirm-pw"
-                  type="password"
-                  required
-                />
+                <input id="confirm-pw" name="confirm-pw" type="password" required />
               </div>
               <div class="details-conatiner">
                 <label for="password">confirm Password</label>
-                <input
-                  id="password"
-                  name="password"
-                  type="password"
-                  required
-                />
+                <input id="password" name="password" type="password" required />
               </div>
             </fieldset>
           </div>
