Update README.md with installation instructions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo-bar">
           <img
             src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
-            title="leaf-image"
+            title="unsplashed-image"
             alt="The Odin Project logo"
           />
           <h1>ODIN</h1>
