--- a/index.html
+++ b/index.html
@@ -34,33 +34,33 @@
             <p>Let's do this!</p>
 
             <fieldset>
-              <div class="details-conatiner">
+              <div class="details-container">
                 <label for="first-name">First Name</label>
                 <input id="first-name" name="first-name" type="text" required />
               </div>
-              <div class="details-conatiner">
+              <div class="details-container">
                 <label for="last-name">Last Name</label>
                 <input id="last-name" name="last-name" type="text" required />
               </div>
             </fieldset>
 
             <fieldset>
-              <div class="details-conatiner">
+              <div class="details-container">
                 <label for="email">Email</label>
                 <input id="email" name="email" type="email" required />
               </div>
-              <div class="details-conatiner">
+              <div class="details-container">
                 <label for="phone">Phone Number</label>
                 <input id="phone" name="phone" type="text" required />
               </div>
             </fieldset>
 
             <fieldset>
-              <div class="details-conatiner">
+              <div class="details-container">
                 <label for="confirm-pw">Password</label>
                 <input id="confirm-pw" name="confirm-pw" type="password" required />
               </div>
-              <div class="details-conatiner">
+              <div class="details-container">
                 <label for="password">confirm Password</label>
                 <input id="password" name="password" type="password" required />
               </div>
